Fix overlap icon in add extra event date. (#1018)
* Fix overlap icon in add extra event date.

* Fix to prevent shrinking behavior.

* Add debug name

* More debuggin

* Revert "More debuggin"

This reverts commit 0dd8ea95a1138f573d2979c88877090981c302ee.

* Revert "Add debug name"

This reverts commit d3c01e84184c19d9013163b4280201f3c7e316d7.

--- a/packages/ui-components/src/Button/style.scss
+++ b/packages/ui-components/src/Button/style.scss
@@ -65,6 +65,9 @@
 		text-align: center;
 		text-shadow: var(--ee-text-shadow-inset-light);
 		width: fit-content;
+		align-items: center;
+ 		white-space: nowrap;
+		flex-shrink: 0;
 		@include transition(all linear 50ms);
 
 		&--no-margin {
